--- a/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
@@ -26,8 +26,8 @@ server {
     limit_conn arbeit 32;
 
     ## Access and error logs.
-    access_log /var/log/nginx/example.com_access.log;
-    error_log /var/log/nginx/example.com_error.log;
+    access_log /var/www/sites/default/logs/nginx_example.com_access.log;
+    error_log /var/www/sites/default/logs/nginx_example.com_error.log;
 
     ## See the blacklist.conf file at the parent dir: /etc/nginx.
     ## Deny access based on the User-Agent header.
@@ -46,16 +46,16 @@ server {
     }
 
     ## Filesystem root of the site and index.
-    root /var/www/sites/example.com/html;
+    root /var/www/sites/default/html;
     index index.php;
 
     ## If you're using a Nginx version greater or equal to 1.1.4 then
     ## you can use keep alive connections to the upstream be it
     ## FastCGI or Apache. If that's not the case comment out the line below.
-    fastcgi_keep_conn on; # keep alive to the FCGI upstream
+    #fastcgi_keep_conn on; # keep alive to the FCGI upstream
 
     ## Uncomment if you're proxying to Apache for handling PHP.
-    #proxy_http_version 1.1; # keep alive to the Apache upstream
+    proxy_http_version 1.1; # keep alive to the Apache upstream
 
     ################################################################
     ### Generic configuration: for most Drupal 7 sites.
@@ -157,8 +157,8 @@ server {
     limit_conn arbeit 32;
 
     ## Access and error logs.
-    access_log /var/log/nginx/example.com_access.log;
-    error_log /var/log/nginx/example.com_error.log;
+    access_log /var/www/sites/default/logs/nginx_example.com_access.log;
+    error_log /var/www/sites/default/logs/nginx_example.com_error.log;
 
     ## Keep alive timeout set to a greater value for SSL/TLS.
     keepalive_timeout 75 75;
@@ -173,16 +173,16 @@ server {
     ## whichever age you want.
     add_header Strict-Transport-Security "max-age=7200";
 
-    root /var/www/sites/example.com/html;
+    root /var/www/sites/default/html;
     index index.php;
 
     ## If you're using a Nginx version greater or equal to 1.1.4 then
     ## you can use keep alive connections to the upstream be it
     ## FastCGI or Apache. If that's not the case comment out the line below.
-    fastcgi_keep_conn on; # keep alive to the FCGI upstream
+    #fastcgi_keep_conn on; # keep alive to the FCGI upstream
 
     ## Uncomment if you're proxying to Apache for handling PHP.
-    #proxy_http_version 1.1; # keep alive to the Apache upstream
+    proxy_http_version 1.1; # keep alive to the Apache upstream
 
     ## See the blacklist.conf file at the parent dir: /etc/nginx.
     ## Deny access based on the User-Agent header.
