--- a/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
@@ -91,7 +91,7 @@ server {
 
     ## This is for Drupal 7. Comment out the line below if you're on
     ## Drupal 6.
-    include apps/drupal/drupal_upload_progress.conf;
+    #include apps/drupal/drupal_upload_progress.conf;
 
     ## This is for Drupal 6. Comment out the line above and uncomment
     ## the line below if you're on Drupla 6.
@@ -243,7 +243,7 @@ server {
 
     ## This is for Drupal 7. Comment out the line below if you're on
     ## Drupal 6.
-    include apps/drupal/drupal_upload_progress.conf;
+    #include apps/drupal/drupal_upload_progress.conf;
 
     ## This is for Drupal 6. Comment out the line above and uncomment
     ## the line below if you're on Drupla 6.
