--- a/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
@@ -120,7 +120,7 @@ server {
     ## Replace the IPv6 address by your own address. The address below
     ## was stolen from the wikipedia page on IPv6.
     ## Comment the line below if you're using SPDY.
-    listen [fe80::202:b3ff:fe1e:8329]:443 ssl spdy ipv6only=on;
+    #listen [fe80::202:b3ff:fe1e:8329]:443 ssl spdy ipv6only=on;
     ## Uncomment the line below if you're using SPDY.
     #listen [fe80::202:b3ff:fe1e:8329]:443 ssl spdy ipv6only=on;
 
