--- a/nginx-apache-memcached-apc-mysql/nginx/apps/drupal/drupal.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/apps/drupal/drupal.conf
@@ -160,12 +160,12 @@ location / {
         location ~* ^/help/[^/]*/README\.txt$ {
             ## Include the specific FastCGI configuration. This is for a
             ## FCGI backend like php-cgi or php-fpm.
-            include fastcgi_private_files.conf;
-            fastcgi_pass phpcgi;
+            #include fastcgi_private_files.conf;
+            #fastcgi_pass phpcgi;
 
             ## If proxying to apache comment the two lines above and
             ## uncomment the line below.
-            #proxy_pass http://phpapache/index.php?q=$uri;
+            proxy_pass http://phpapache/index.php?q=$uri;
         }
     }
 
