--- a/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
@@ -131,8 +131,8 @@ server {
 
     ## See the keepalive_timeout directive in nginx.conf.
     ## Server certificate and key.
-    ssl_certificate /etc/ssl/certs/example-cert.pem;
-    ssl_certificate_key /etc/ssl/private/example.key;
+    #ssl_certificate /etc/ssl/certs/example-cert.pem;
+    #ssl_certificate_key /etc/ssl/private/example.key;
 
     return 301 $scheme://example.com$request_uri;
 
@@ -165,8 +165,8 @@ server {
 
     ## See the keepalive_timeout directive in nginx.conf.
     ## Server certificate and key.
-    ssl_certificate /etc/ssl/certs/example-cert.pem;
-    ssl_certificate_key /etc/ssl/private/example.key;
+    #ssl_certificate /etc/ssl/certs/example-cert.pem;
+    #ssl_certificate_key /etc/ssl/private/example.key;
 
     ## Strict Transport Security header for enhanced security. See
     ## http://www.chromium.org/sts. I've set it to 2 hours; set it to
