--- a/nginx-apache-memcached-apc-mysql/nginx/nginx.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
     default_type application/octet-stream;
 
     ## FastCGI.
-    include /etc/nginx/fastcgi.conf;
+    #include /etc/nginx/fastcgi.conf;
 
     ## Default log and error files.
     access_log /var/log/nginx/access.log;
