--- a/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/sites-available/example.com.conf
@@ -8,7 +8,7 @@ server {
     listen 80; # IPv4
     ## Replace the IPv6 address by your own address. The address below
     ## was stolen from the wikipedia page on IPv6.
-    listen [fe80::202:b3ff:fe1e:8329]:80 ipv6only=on;
+    #listen [fe80::202:b3ff:fe1e:8329]:80 ipv6only=on;
     server_name www.example.com;
     return 301 $scheme://example.com$request_uri;
 
@@ -19,7 +19,7 @@ server {
     listen 80; # IPv4
     ## Replace the IPv6 address by your own address. The address below
     ## was stolen from the wikipedia page on IPv6.
-    listen [fe80::202:b3ff:fe1e:8330]:80 ipv6only=on;
+    #listen [fe80::202:b3ff:fe1e:8330]:80 ipv6only=on;
 
     server_name example.com;
 
@@ -148,7 +148,7 @@ server {
     ## was stolen from the wikipedia page on IPv6.
 
     ## Comment the line below if you're using SPDY.
-    listen [fe80::202:b3ff:fe1e:8330]:443 ssl ipv6only=on;
+    #listen [fe80::202:b3ff:fe1e:8330]:443 ssl ipv6only=on;
     ## Uncomment the line below if you're using SPDY.
     #listen [fe80::202:b3ff:fe1e:8330]:443 ssl spdy ipv6only=on;
 
