--- a/common/apache2/ports.conf
+++ b/common/apache2/ports.conf
@@ -5,7 +5,7 @@
 # Debian etch). See /usr/share/doc/apache2.2-common/NEWS.Debian.gz and
 # README.Debian.gz
 
-NameVirtualHost *:8080
+NameVirtualHost 127.0.0.1:8080
 Listen 8080
 
 <IfModule mod_ssl.c>
