--- a/nginx-apache-memcached-apc-mysql/nginx/apps/drupal/drupal.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/apps/drupal/drupal.conf
@@ -30,7 +30,7 @@ location / {
 
         ## If proxying to apache comment the two lines above and
         ## uncomment the line below.
-        proxy_pass http://phpapache/index.php?q=$uri;
+        proxy_pass http://phpapache;
 
         ## For not signaling a 404 in the error log whenever the
         ## system/files directory is accessed add the line below.
