--- a/nginx-apache-memcached-apc-mysql/nginx/upstream_phpapache.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/upstream_phpapache.conf
@@ -14,7 +14,7 @@ upstream phpapache {
     ## following line.
     #fair;
     server 127.0.0.1:8080;
-    server 127.0.0.1:8081;
+    #server 127.0.0.1:8081;
     ## Create a backend connection cache. Note that this requires
     ## Nginx version greater or equal to 1.1.4.
     ## Cf. http://nginx.org/en/CHANGES. Comment out the following
