--- a/nginx-apache-memcached-apc-mysql/nginx/apps/drupal/drupal.conf
+++ b/nginx-apache-memcached-apc-mysql/nginx/apps/drupal/drupal.conf
@@ -165,7 +165,7 @@ location / {
 
             ## If proxying to apache comment the two lines above and
             ## uncomment the line below.
-            proxy_pass http://phpapache/index.php?q=$uri;
+            proxy_pass http://phpapache;
         }
     }
 
@@ -196,7 +196,7 @@ location @drupal {
 
     ## To use Apache for serving PHP uncomment the line bellow and
     ## comment out the above.
-    proxy_pass http://phpapache/index.php?q=$uri&$args;
+    proxy_pass http://phpapache;
     ## Proxy microcache.
     include apps/drupal/microcache_proxy.conf;
     ## Proxy microcache for authenticated users also.
@@ -221,7 +221,7 @@ location @drupal-no-args {
 
     ## If proxying to apache comment the two lines above and
     ## uncomment the line below.
-    proxy_pass http://phpapache/index.php?q=$uri;
+    proxy_pass http://phpapache;
 
     ## Proxy microcache.
     include apps/drupal/microcache_proxy.conf;
